<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pageLayout"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/brushWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/clear"
        app:layout_constraintLeft_toRightOf="@id/colors"
        />
    <Spinner
        android:id="@+id/colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/clear"
        />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@id/buttonUpload"
        />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/save"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUpload"
        app:layout_constraintStart_toEndOf="@+id/buttonUpload" />

    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/load"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUpload"
        app:layout_constraintEnd_toStartOf="@+id/buttonPrint" />

    <Button
        android:id="@+id/buttonPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/print"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUpload"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>