<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Page3">
<Button
    android:id="@+id/upLoad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/upLoad"
    android:layout_marginTop="30dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/arrow3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arrow1"
    android:textSize="20sp"
    android:layout_marginTop="34dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="@id/upLoad"/>

<TextView
    android:id="@+id/explainUpload"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/explainUpload"
    android:layout_marginTop="30dp"
    android:textSize="16sp"
    app:layout_constraintWidth_percent="0.6"
    app:layout_constraintLeft_toRightOf="@id/arrow3"
    app:layout_constraintTop_toTopOf="parent"/>

<Button
    android:id="@+id/Load"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/load"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/explainUpload"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/arrow4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arrow1"
    android:textSize="20sp"
    android:layout_marginTop="14dp"
    app:layout_constraintTop_toBottomOf="@id/explainUpload"
    app:layout_constraintLeft_toRightOf="@id/Load"/>

<TextView
    android:id="@+id/explainLoad"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/explainLoad"
    android:layout_marginTop="10dp"
    android:textSize="16sp"
    app:layout_constraintWidth_percent="0.6"
    app:layout_constraintTop_toBottomOf="@id/explainUpload"
    app:layout_constraintLeft_toRightOf="@id/arrow4"/>

<Button
    android:id="@+id/Print"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Print"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/Load"
    app:layout_constraintStart_toStartOf="parent"/>

<TextView
    android:id="@+id/arrow5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/arrow1"
    android:textSize="20sp"
    android:layout_marginTop="19dp"
    app:layout_constraintTop_toBottomOf="@id/explainLoad"
    app:layout_constraintLeft_toRightOf="@id/Print"/>

<TextView
    android:id="@+id/explainPrint"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/explainPrint"
    android:layout_marginTop="17dp"
    android:textSize="16sp"
    app:layout_constraintWidth_percent="0.6"
    app:layout_constraintTop_toBottomOf="@id/explainLoad"
    app:layout_constraintLeft_toRightOf="@id/arrow5"/>



</androidx.constraintlayout.widget.ConstraintLayout>